# pass-wrapper

./: .pre-commit-config.yaml  .pylintrc  pyproject.toml
.github/workflows/: validate_commit.yml
src/pass_wrapper/: wrapper.py
tests/: cmd_test.py  pass_wrapper_test.py  test_pass_wrapper.py  wrapper_test.py
