[tool.poetry]
name = "pass-wrapper"
version = "0.1.0"
description = ""
authors = ["Kamil Luczak <kamilluczak@luczakweb.pl>"]

[tool.poetry.dependencies]
python = ">=3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.5.1"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
